# ET-Market-Oracle

./: Dockerfile  README.md  agent_exports.txt  agent_output.txt  docker-compose.yaml  fix_db.py  frontend.py  full_output.txt  full_scheme.txt  import_error.txt  init_db.py  main.py  migrate.py  pyproject.toml  read_err.py  requirement.txt  requirements.txt  seed.py  telegram_bot.py  temp_scheme.json  test.py  test_agent.py  test_auth_api.py  test_compressor.py  test_error.txt  test_exports.py  test_import.py  test_out.txt  test_out_new.txt  test_results.txt
app/: main.py
app/agents/: orchestrator.py  tools.py
app/api/: agent.py  alerts.py  auth.py  market.py  portfolio.py  watchlist.py
app/core/: config.py  database.py  security.py  vectorstore.py
app/models/: schema.py
app/services/: market_service.py  news_service.py
frontend/: package-lock.json  package.json  shiftdata.md  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWindow.jsx  InlineChart.jsx  NotificationBell.jsx  Sidebar.jsx  WatchlistChart.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AuthGate.jsx  Dashboard.jsx
